add logging for repository cloning step

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -13,6 +13,8 @@ jobs:
     steps:
       - name: Clone another repo
         run: |
+          echo "Cloning repository... ${{ secrets.GITEA_TOKEN }}"
+
           git clone https://${{ secrets.GITEA_TOKEN }}:${{ secrets.GITEA_USERNAME }}@gitea.com/angi/angi.user.git
           cd angi.user
           ls -la
