--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -21,11 +21,13 @@ jobs:
       - name: Build Docker image
         run: |
           cd angi.user
-          export COMMIT_SHA=$(git rev-parse --short HEAD)
+          COMMIT_SHA=$(git rev-parse --short HEAD)
           echo "Commit SHA: $COMMIT_SHA"
+          echo "COMMIT_SHA=$COMMIT_SHA" >> $GITHUB_ENV
           docker login quay.io -u ${{ secrets.QUAY_USERNAME }} -p ${{ secrets.QUAY_TOKEN }}
           docker build -t quay.io/${{ secrets.QUAY_USERNAME }}/angi.user:$COMMIT_SHA .
       - name: Push Docker image
+        if: success()
         run: |
           docker push quay.io/${{ secrets.QUAY_USERNAME }}/angi.user:$COMMIT_SHA
           echo "Docker image pushed successfully."
