--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -10,6 +10,8 @@ on:
 jobs:
   build:
     runs-on: ubuntu-latest
+    outputs:
+      IMG_TAG: ${{ steps.set_img_tag.outputs.IMG_TAG }}
     steps:
       - name: Clone another repo
         run: |
@@ -32,18 +34,19 @@ jobs:
           docker push quay.io/angi/angi.user:${{ env.COMMIT_SHA }}.${{ github.run_number }}
           echo "Docker image pushed successfully."
       - name: Set image tag for deployment
+        id: set_img_tag
         run: echo "IMG_TAG=${{ env.COMMIT_SHA }}.${{ github.run_number }}" >> $GITHUB_OUTPUT
   deploy:
     runs-on: ubuntu-latest
-    env: 
+    needs: build
+    env:
       KUBE_CONFIG_DATA: ${{ secrets.KUBE_CONFIG_DATA }}
       IMAGE_TAG: ${{ needs.build.outputs.IMG_TAG }}
-    needs: build
     steps:
       - name: debug
         run: |
-          echo "KUBE_CONFIG_DATA: $KUBE_CONFIG_DATA"
           echo "IMAGE_TAG: $IMAGE_TAG"
+      # echo "KUBE_CONFIG_DATA: $KUBE_CONFIG_DATA"
       # - name: Set up kubeconfig
       #   run: |
       #     mkdir -p $HOME/.kube
