--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -25,18 +25,27 @@ jobs:
   prepare:
     runs-on: ubuntu-latest
     outputs:
-      NAME: ${{ github.event.client_payload.name }}
-      GIT_URL: ${{ github.event.client_payload.gitUrl }}
-      BRANCH: ${{ github.event.client_payload.branch }}
-      IMAGE_NAME: ${{ github.event.client_payload.imageName }}
-      DOCKER_FILE_PATH: ${{ github.event.client_payload.dockerfilePath }}
-      KUBECONFIG_YAML_PATH: ${{ github.event.client_payload.kubeConfigYamlPath }}
+      NAME: ${{ steps.set_env_vars.outputs.NAME }}
+      GIT_URL: ${{ steps.set_env_vars.outputs.GIT_URL }}
+      BRANCH: ${{ steps.set_env_vars.outputs.BRANCH }}
+      IMAGE_NAME: ${{ steps.set_env_vars.outputs.IMAGE_NAME }}
+      DOCKER_FILE_PATH: ${{ steps.set_env_vars.outputs.DOCKER_FILE_PATH }}
+      KUBECONFIG_YAML_PATH: ${{ steps.set_env_vars.outputs.KUBECONFIG_YAML_PATH }}
     steps:
       - name: Notify Telegram on workflow start
         run: |
           curl -s -X POST https://api.telegram.org/bot${{ secrets.TELE_TOKEN }}/sendMessage \
             -d chat_id=${{ secrets.TELEGRAM_CHAT_ID }} \
-            -d text="🚀 Workflow ${{ github.workflow }} started for Group ${{ github.event.client_payload.group }}."
+            -d text="🚀 Workflow ${{ github.workflow }} started for ${{ github.event.client_payload.imageName }}."
+      - name: Set up environment variables
+        id: set_env_vars
+        run: |
+          echo "NAME=${{ github.event.client_payload.name }}" >> $GITHUB_OUTPUT
+          echo "GIT_URL=${{ github.event.client_payload.gitUrl }}" >> $GITHUB_OUTPUT
+          echo "BRANCH=${{ github.event.client_payload.branch }}" >> $GITHUB_OUTPUT
+          echo "IMAGE_NAME=${{ github.event.client_payload.imageName }}" >> $GITHUB_OUTPUT
+          echo "DOCKER_FILE_PATH=${{ github.event.client_payload.dockerfilePath }}" >> $GITHUB_OUTPUT
+          echo "KUBECONFIG_YAML_PATH=${{ github.event.client_payload.kubeConfigYamlPath }}" >> $GITHUB_OUTPUT
   build:
     runs-on: ubuntu-latest
     needs: prepare
