--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -66,7 +66,7 @@ jobs:
     steps:
       - name: Clone another repo
         run: |
-          echo "Cloning repository..."
+          echo "Cloning repository... ${{ env.GIT_URL }} on branch ${{ env.BRANCH }}"
 
           git clone --depth=1 --branch ${{ env.BRANCH }} ${{ env.GIT_URL }} app
           cd app
