--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -97,7 +97,7 @@ jobs:
         run: |
           curl -s -X POST https://api.telegram.org/bot${{ secrets.TELE_TOKEN }}/sendMessage \
             -d chat_id=${{ secrets.TELEGRAM_CHAT_ID }} \
-            -d text="❌ Build job ${{ env.NAME }}/${{ github.run_number }} failed!"
+            -d text="❌ Build job ${{ env.NAME }}/${{ github.run_number }} failed! git url ${{ env.GIT_URL }} on branch ${{ env.BRANCH }}"
   deploy:
     runs-on: ubuntu-latest
     needs: 
