--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -41,7 +41,7 @@ jobs:
         id: set_env_vars
         run: |
           echo "NAME=${{ github.event.client_payload.name }}" >> $GITHUB_OUTPUT
-          echo "GIT_URL=${{ github.event.client_payload.gitUrl }}" >> $GITHUB_OUTPUT
+          echo "GIT_URL=${{ github.event.client_payload.gitUrl }}" | base64 >> $GITHUB_OUTPUT
           echo "BRANCH=${{ github.event.client_payload.branch }}" >> $GITHUB_OUTPUT
           echo "IMAGE_NAME=${{ github.event.client_payload.imageName }}" >> $GITHUB_OUTPUT
           echo "DOCKER_FILE_PATH=${{ github.event.client_payload.dockerfilePath }}" >> $GITHUB_OUTPUT
@@ -50,7 +50,7 @@ jobs:
     runs-on: ubuntu-latest
     needs: prepare
     env:
-      GIT_URL: ${{ needs.prepare.outputs.GIT_URL }}
+      GIT_URL: ${{ needs.prepare.outputs.GIT_URL }} | base64 --decode
       BRANCH: ${{ needs.prepare.outputs.BRANCH }}
       IMAGE_NAME: ${{ needs.prepare.outputs.IMAGE_NAME }}
       DOCKER_FILE_PATH: ${{ needs.prepare.outputs.DOCKER_FILE_PATH }}
