--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -41,7 +41,7 @@ jobs:
         id: set_env_vars
         run: |
           echo "NAME=${{ github.event.client_payload.name }}" >> $GITHUB_OUTPUT
-          echo "GIT_URL=${{ github.event.client_payload.gitUrl }}" | base64 >> $GITHUB_OUTPUT
+          echo "GIT_URL=$(echo -n '${{ github.event.client_payload.gitUrl }}' | base64 -w0)" >> $GITHUB_OUTPUT
           echo "BRANCH=${{ github.event.client_payload.branch }}" >> $GITHUB_OUTPUT
           echo "IMAGE_NAME=${{ github.event.client_payload.imageName }}" >> $GITHUB_OUTPUT
           echo "DOCKER_FILE_PATH=${{ github.event.client_payload.dockerfilePath }}" >> $GITHUB_OUTPUT
