--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -32,6 +32,10 @@ jobs:
       DOCKER_FILE_PATH: ${{ steps.set_env_vars.outputs.DOCKER_FILE_PATH }}
       KUBECONFIG_YAML_PATH: ${{ steps.set_env_vars.outputs.KUBECONFIG_YAML_PATH }}
     steps:
+      - name: Prepare log capture
+        run: |
+          exec > >(tee -a prepare.log) 2>&1
+          echo "=== Prepare Start  ==="
       - name: Notify Telegram on workflow start
         run: |
           curl -s -X POST https://api.telegram.org/bot${{ secrets.TELE_TOKEN }}/sendMessage \
@@ -46,6 +50,11 @@ jobs:
           echo "IMAGE_NAME=${{ github.event.client_payload.imageName }}" >> $GITHUB_OUTPUT
           echo "DOCKER_FILE_PATH=${{ github.event.client_payload.dockerfilePath }}" >> $GITHUB_OUTPUT
           echo "KUBECONFIG_YAML_PATH=${{ github.event.client_payload.kubeConfigYamlPath }}" >> $GITHUB_OUTPUT
+      - name: Upload log
+        uses: actions/upload-artifact@v4
+        with:
+          name: prepare-log
+          path: prepare.log
   build:
     runs-on: ubuntu-latest
     needs: prepare
@@ -62,6 +71,10 @@ jobs:
     outputs:
       IMG_TAG: ${{ steps.set_img_tag.outputs.IMG_TAG }}
     steps:
+      - name: Build log capture
+        run: |
+          exec > >(tee -a build.log) 2>&1
+          echo "=== Build Start ==="
       - name: Clone another repo
         run: |
           echo "Cloning repository... ${{ env.GIT_URL }} on branch ${{ env.BRANCH }}"
@@ -98,6 +111,11 @@ jobs:
           curl -s -X POST https://api.telegram.org/bot${{ secrets.TELE_TOKEN }}/sendMessage \
             -d chat_id=${{ secrets.TELEGRAM_CHAT_ID }} \
             -d text="❌ Build job ${{ env.NAME }}/${{ github.run_number }} failed! git url ${{ env.GIT_URL }} on branch ${{ env.BRANCH }}"
+      - name: Upload log
+        uses: actions/upload-artifact@v4
+        with:
+          name: build-log
+          path: build.log
   deploy:
     runs-on: ubuntu-latest
     needs: 
@@ -108,6 +126,10 @@ jobs:
       IMAGE_TAG: ${{ needs.build.outputs.IMG_TAG }}
       KUBECONFIG_YAML_PATH: ${{ needs.prepare.outputs.KUBECONFIG_YAML_PATH }}
     steps:
+      - name: Deploy log capture
+        run: |
+          exec > >(tee -a deploy.log) 2>&1
+          echo "=== Deploy Start ==="
       - name: debug
         run: |
           echo "IMAGE_TAG: $IMAGE_TAG"
@@ -122,3 +144,31 @@ jobs:
       #   run: |
       #     echo "Deploying Docker image to K3s..."
       #     kubectl set image deployment/angi-user angi-user=quay.io/angi/angi.user:${{ env.COMMIT_SHA }}.${{ github.run_number }} --kubeconfig ${{ secrets.K3S_KUBECONFIG }}
+      - name: Upload log
+        uses: actions/upload-artifact@v4
+        with:
+          name: deploy-log
+          path: deploy.log
+  send-log:
+    runs-on: ubuntu-latest
+    needs: [prepare, build, deploy]
+    steps:
+      - uses: actions/download-artifact@v4
+        with:
+          path: ./logs
+      - name: Merge logs
+        run: |
+          cat ./logs/* > full-workflow.log
+          echo "=== Hợp nhất log thành công ==="
+      - name: Send log to Telegram
+        env:
+          TELEGRAM_TOKEN: ${{ secrets.TELEGRAM_TOKEN }}
+          TELEGRAM_CHAT_ID: ${{ secrets.TELEGRAM_CHAT_ID }}
+        run: |
+          # Chia nhỏ log nếu dài hơn 4000 ký tự (Telegram giới hạn)
+          LOG_CONTENT=$(cat full-workflow.log)
+          while IFS= read -r chunk; do
+            curl -s -X POST https://api.telegram.org/bot${TELEGRAM_TOKEN}/sendMessage \
+              -d chat_id="${TELEGRAM_CHAT_ID}" \
+              --data-urlencode text="$chunk"
+          done < <(echo "$LOG_CONTENT" | fold -s -w 3500)
