--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -158,7 +158,7 @@ jobs:
           path: ./logs
       - name: Merge logs
         run: |
-          cat ./logs/* > full-workflow.log
+          cat ./logs/*/*.log > full-workflow.log
           echo "=== Hợp nhất log thành công ==="
       - name: Send log to Telegram
         env:
@@ -172,3 +172,8 @@ jobs:
               -d chat_id="${TELEGRAM_CHAT_ID}" \
               --data-urlencode text="$chunk"
           done < <(echo "$LOG_CONTENT" | fold -s -w 3500)
+      # - name: Send to server
+      #   run: |
+      #     curl -s -X POST http://your-server.com/upload \
+      #       -H "Content-Type: multipart/form-data" \
+      #       -F "file=@full-workflow.log"
