--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,6 +1,7 @@
 # {
 #   "event_type": "trigger_build",
 #   "client_payload": {
+#     "job_id": "job_id",
 #     "name": "angi.user",
 #     "gitUrl": "",
 #     "branch": "main",
@@ -31,6 +32,7 @@ jobs:
       IMAGE_NAME: ${{ steps.set_env_vars.outputs.IMAGE_NAME }}
       DOCKER_FILE_PATH: ${{ steps.set_env_vars.outputs.DOCKER_FILE_PATH }}
       KUBECONFIG_YAML_PATH: ${{ steps.set_env_vars.outputs.KUBECONFIG_YAML_PATH }}
+      JOB_ID: ${{ steps.set_env_vars.outputs.JOB_ID }}
     steps:
       - name: Notify Telegram on workflow start
         run: |
@@ -46,6 +48,7 @@ jobs:
           echo "IMAGE_NAME=${{ github.event.client_payload.imageName }}" >> $GITHUB_OUTPUT
           echo "DOCKER_FILE_PATH=${{ github.event.client_payload.dockerfilePath }}" >> $GITHUB_OUTPUT
           echo "KUBECONFIG_YAML_PATH=${{ github.event.client_payload.kubeConfigYamlPath }}" >> $GITHUB_OUTPUT
+          echo "JOB_ID=${{ github.event.client_payload.job_id || github.run_id }}" >> $GITHUB_OUTPUT
   build:
     runs-on: ubuntu-latest
     needs: prepare
@@ -59,32 +62,33 @@ jobs:
       TELEGRAM_CHAT_ID: ${{ secrets.TELEGRAM_CHAT_ID }}
       TELE_TOKEN: ${{ secrets.TELE_TOKEN }}
       NAME: ${{ needs.prepare.outputs.NAME }}
+      JOB_ID: ${{ needs.prepare.outputs.JOB_ID }}
     outputs:
       IMG_TAG: ${{ steps.set_img_tag.outputs.IMG_TAG }}
     steps:
       - name: Clone another repo
         run: |
-          echo "Cloning repository... ${{ env.GIT_URL }} on branch ${{ env.BRANCH }}"
+          ./scripts/stream-log.sh echo "Cloning repository... ${{ env.GIT_URL }} on branch ${{ env.BRANCH }}"
 
-          git clone --depth=1 --branch ${{ env.BRANCH }} ${{ env.GIT_URL }} app
-          cd app
-          ls -la
-          COMMIT_SHA=$(git rev-parse --short HEAD)
-          echo "Commit SHA: $COMMIT_SHA"
-          echo "COMMIT_SHA=$COMMIT_SHA" >> $GITHUB_ENV
+          ./scripts/stream-log.sh git clone --depth=1 --branch ${{ env.BRANCH }} ${{ env.GIT_URL }} app
+          ./scripts/stream-log.sh cd app
+          ./scripts/stream-log.sh ls -la
+          ./scripts/stream-log.sh COMMIT_SHA=$(git rev-parse --short HEAD)
+          ./scripts/stream-log.sh echo "Commit SHA: $COMMIT_SHA"
+          ./scripts/stream-log.sh echo "COMMIT_SHA=$COMMIT_SHA" >> $GITHUB_ENV
       - name: Build Docker image
         run: |
-          cd app
-          docker login quay.io -u ${{ secrets.QUAY_USERNAME }} -p ${{ secrets.QUAY_TOKEN }}
-          docker build -t quay.io/${{ env.IMAGE_NAME }}:${{ env.COMMIT_SHA }}.${{ github.run_number }} .
+          ./scripts/stream-log.sh cd app
+          ./scripts/stream-log.sh docker login quay.io -u ${{ secrets.QUAY_USERNAME }} -p ${{ secrets.QUAY_TOKEN }}
+          ./scripts/stream-log.sh docker build -t quay.io/${{ env.IMAGE_NAME }}:${{ env.COMMIT_SHA }}.${{ github.run_number }} .
       - name: Push Docker image
         if: success()
         run: |
-          docker push quay.io/${{ env.IMAGE_NAME }}:${{ env.COMMIT_SHA }}.${{ github.run_number }}
-          echo "Docker image pushed successfully."
+          ./scripts/stream-log.sh docker push quay.io/${{ env.IMAGE_NAME }}:${{ env.COMMIT_SHA }}.${{ github.run_number }}
+          ./scripts/stream-log.sh echo "Docker image pushed successfully."
       - name: Set image tag for deployment
         id: set_img_tag
-        run: echo "IMG_TAG=${{ env.COMMIT_SHA }}.${{ github.run_number }}" >> $GITHUB_OUTPUT
+        run: ./scripts/stream-log.sh echo "IMG_TAG=${{ env.COMMIT_SHA }}.${{ github.run_number }}" >> $GITHUB_OUTPUT
       - name: Notify Telegram on success
         if: success()
         run: |
@@ -107,10 +111,11 @@ jobs:
       KUBE_CONFIG_DATA: ${{ secrets.KUBE_CONFIG_DATA }}
       IMAGE_TAG: ${{ needs.build.outputs.IMG_TAG }}
       KUBECONFIG_YAML_PATH: ${{ needs.prepare.outputs.KUBECONFIG_YAML_PATH }}
+      JOB_ID: ${{ needs.prepare.outputs.JOB_ID }}
     steps:
       - name: debug
         run: |
-          echo "IMAGE_TAG: $IMAGE_TAG"
+          ./scripts/stream-log.sh echo "IMAGE_TAG: $IMAGE_TAG"
       # echo "KUBE_CONFIG_DATA: $KUBE_CONFIG_DATA"
       # - name: Set up kubeconfig
       #   run: |
