--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -34,10 +34,8 @@ jobs:
       KUBECONFIG_YAML_PATH: ${{ steps.set_env_vars.outputs.KUBECONFIG_YAML_PATH }}
       JOB_ID: ${{ steps.set_env_vars.outputs.JOB_ID }}
     steps:
-      - name: Checkout repo
-        uses: actions/checkout@v3
-      - name: Set execute permission
-        run: chmod +x scripts/stream-log.sh
+      - name: Record start time
+        run: echo "START_TIME=$(date +%s)" >> $GITHUB_ENV
       - name: Notify Telegram on workflow start
         run: |
           curl -s -X POST https://api.telegram.org/bot${{ secrets.TELE_TOKEN }}/sendMessage \
@@ -46,7 +44,6 @@ jobs:
       - name: Set up environment variables
         id: set_env_vars
         run: |
-          ./scripts/stream-log.sh set +e
           echo "NAME=${{ github.event.client_payload.name }}" >> $GITHUB_OUTPUT
           echo "GIT_URL=$(echo -n '${{ github.event.client_payload.gitUrl }}' | base64 -w0)" >> $GITHUB_OUTPUT
           echo "BRANCH=${{ github.event.client_payload.branch }}" >> $GITHUB_OUTPUT
@@ -54,7 +51,16 @@ jobs:
           echo "DOCKER_FILE_PATH=${{ github.event.client_payload.dockerfilePath }}" >> $GITHUB_OUTPUT
           echo "KUBECONFIG_YAML_PATH=${{ github.event.client_payload.kubeConfigYamlPath }}" >> $GITHUB_OUTPUT
           echo "JOB_ID=${{ github.event.client_payload.job_id || github.run_id }}" >> $GITHUB_OUTPUT
-          set -e
+      - name: Record end time and duration
+        if: always()
+        run: |
+            END_TIME=$(date +%s)
+            echo "END_TIME=$END_TIME" >> $GITHUB_ENV
+            DURATION=$((END_TIME-START_TIME))
+            echo "DURATION=$DURATION" >> $GITHUB_ENV
+            curl -s -X POST https://api.telegram.org/bot${{ secrets.TELE_TOKEN }}/sendMessage \
+              -d chat_id=${{ secrets.TELEGRAM_CHAT_ID }} \
+              -d text="⏱️ Workflow ${{ github.workflow }} for ${{ github.event.client_payload.imageName }} took $DURATION seconds."
   build:
     runs-on: ubuntu-latest
     needs: prepare
@@ -72,13 +78,10 @@ jobs:
     outputs:
       IMG_TAG: ${{ steps.set_img_tag.outputs.IMG_TAG }}
     steps:
-      - name: Checkout repo
-        uses: actions/checkout@v3
-      - name: Set execute permission
-        run: chmod +x scripts/stream-log.sh
+      - name: Record start time
+        run: echo "START_TIME=$(date +%s)" >> $GITHUB_ENV
       - name: Clone another repo
         run: |
-          ./scripts/stream-log.sh set +e
           echo "Cloning repository... ${{ env.GIT_URL }} on branch ${{ env.BRANCH }}"
 
           git clone --depth=1 --branch ${{ env.BRANCH }} ${{ env.GIT_URL }} app
@@ -87,37 +90,39 @@ jobs:
           COMMIT_SHA=$(git rev-parse --short HEAD)
           echo "Commit SHA: $COMMIT_SHA"
           echo "COMMIT_SHA=$COMMIT_SHA" >> $GITHUB_ENV
-          set -e
       - name: Build Docker image
         run: |
-          ./scripts/stream-log.sh set +e
           cd app
           docker login quay.io -u ${{ secrets.QUAY_USERNAME }} -p ${{ secrets.QUAY_TOKEN }}
           docker build -t quay.io/${{ env.IMAGE_NAME }}:${{ env.COMMIT_SHA }}.${{ github.run_number }} .
-          set -e
       - name: Push Docker image
         if: success()
         run: |
-          ./scripts/stream-log.sh set +e
           docker push quay.io/${{ env.IMAGE_NAME }}:${{ env.COMMIT_SHA }}.${{ github.run_number }}
           echo "Docker image pushed successfully."
-          ./scripts/stream-log.sh set -e
       - name: Set image tag for deployment
         id: set_img_tag
         run: echo "IMG_TAG=${{ env.COMMIT_SHA }}.${{ github.run_number }}" >> $GITHUB_OUTPUT
+      - name: Record end time and duration
+        if: always()
+        run: |
+            END_TIME=$(date +%s)
+            echo "END_TIME=$END_TIME" >> $GITHUB_ENV
+            DURATION=$((END_TIME-START_TIME))
+            echo "DURATION=$DURATION" >> $GITHUB_ENV
       - name: Notify Telegram on success
         if: success()
         run: |
           curl -s -X POST https://api.telegram.org/bot${{ secrets.TELE_TOKEN }}/sendMessage \
             -d chat_id=${{ secrets.TELEGRAM_CHAT_ID }} \
-            -d text="✅ Build job ${{ env.NAME }} completed successfully! Tag: ${{ steps.set_img_tag.outputs.IMG_TAG }}"
+            -d text="✅ Build job ${{ env.NAME }} completed successfully! Tag: ${{ steps.set_img_tag.outputs.IMG_TAG }}, Duration: $DURATION seconds."
 
       - name: Notify Telegram on failure
         if: failure()
         run: |
           curl -s -X POST https://api.telegram.org/bot${{ secrets.TELE_TOKEN }}/sendMessage \
             -d chat_id=${{ secrets.TELEGRAM_CHAT_ID }} \
-            -d text="❌ Build job ${{ env.NAME }}/${{ github.run_number }} failed! git url ${{ env.GIT_URL }} on branch ${{ env.BRANCH }}"
+            -d text="❌ Build job ${{ env.NAME }}/${{ github.run_number }} failed! git url ${{ env.GIT_URL }} on branch ${{ env.BRANCH }}, Duration: $DURATION seconds."
   deploy:
     runs-on: ubuntu-latest
     needs: 
@@ -129,15 +134,9 @@ jobs:
       KUBECONFIG_YAML_PATH: ${{ needs.prepare.outputs.KUBECONFIG_YAML_PATH }}
       JOB_ID: ${{ needs.prepare.outputs.JOB_ID }}
     steps:
-      - name: Checkout repo
-        uses: actions/checkout@v3
-      - name: Set execute permission
-        run: chmod +x scripts/stream-log.sh
       - name: debug
         run: |
-          ./scripts/stream-log.sh set +e
           echo "IMAGE_TAG: $IMAGE_TAG"
-          ./scripts/stream-log.sh set -e
       # echo "KUBE_CONFIG_DATA: $KUBE_CONFIG_DATA"
       # - name: Set up kubeconfig
       #   run: |
